# anything_to_ascii

./: .gitignore  Cargo.toml  README.md  anything_to_ascii_android_install.sh  api_docs.md
src/: ascii_img.rs  chars.rs  cli.rs  dimensions.rs  lib.rs  main.rs
src/api/: api.rs
src/audio/: audio_to_ascii.rs  mod.rs
src/core/: algo.rs  char.rs  chars.rs  cli.rs  flat_matrix.rs  mod.rs
src/from_audio/: ascii_waveform.rs  mod.rs
src/from_image/: ascii_img.rs  mod.rs
src/from_video/: ascii_video.rs  mod.rs
src/image/: image_to_ascii.rs
src/read/: mod.rs  read.rs
src/utils/: error.rs  utils.rs
src/video/: mod.rs  video_to_ascii.rs
